[gd_scene load_steps=13 format=3 uid="uid://c0dfn23wakvsj"]

[ext_resource type="Script" uid="uid://dqiukfrwc1ud0" path="res://scripts/chest.gd" id="1_gqd3d"]
[ext_resource type="Texture2D" uid="uid://7e4ggqrqltlx" path="res://assets/nuevosSprites/0x72_DungeonTilesetII_v1.7.png" id="1_sy5e1"]
[ext_resource type="AudioStream" uid="uid://bv5pmdha600lx" path="res://assets/sounds/explosion.wav" id="2_gqd3d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yue2o"]
atlas = ExtResource("1_sy5e1")
region = Rect2(304, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhylo"]
atlas = ExtResource("1_sy5e1")
region = Rect2(320, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w02o5"]
atlas = ExtResource("1_sy5e1")
region = Rect2(336, 416, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ilhio"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yue2o")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yue2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhylo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w02o5")
}],
"loop": false,
"name": &"opening",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kg5gm"]
size = Vector2(16, 9)

[sub_resource type="Animation" id="Animation_sy5e1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animChest:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("animChest:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"opening"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PickupSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gqd3d"]
resource_name = "closing"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animChest:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1, 2.03333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("animChest:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"opening"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.04),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PickupSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.01, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_yue2o"]
resource_name = "opening"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animChest:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.04, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("animChest:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"opening"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.04),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PickupSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.01, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yhylo"]
_data = {
&"RESET": SubResource("Animation_sy5e1"),
&"closing": SubResource("Animation_gqd3d"),
&"opening": SubResource("Animation_yue2o")
}

[node name="Chest" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_gqd3d")

[node name="animChest" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ilhio")
animation = &"opening"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_kg5gm")

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_gqd3d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yhylo")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="animChest" to="." method="_on_anim_chest_animation_finished"]
